fix jumpy infographic height

--- a/posts/patricia-evans/less/app.less
+++ b/posts/patricia-evans/less/app.less
@@ -1051,7 +1051,7 @@ p,ul,ol,li {
     .left-section .infographic-section-inner {
         background-color: rgba(0,0,0,0.5);
     }
-    .infographic-section:not(:first-child) {
+    .infographic-section:not(:first-child) .infographic-section-inner {
         border-top: 1px solid #fff;
     }
     .infographic-labels .infographic-section:not(:first-child) {
